--- a/portfolio.html
+++ b/portfolio.html
@@ -14,41 +14,101 @@
 <header class="header">
     <div class="container">
 
-        <nav class="navigation-container">
-            <a href="./index.html" class="logo">
-                <span class="logo--blue-part">Web</span>Studio
-            </a>
-            <ul class="navigation-list">
-                <li class="navigation-list__item">
-                    <a class="header__link navigation-list__link" href="./index.html">Студия</a>
+        <a href="./index.html" class="logo">
+            <span class="logo--blue-part">Web</span>Studio
+        </a>
+        <button type="button" class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+            <svg width="24" height="24" aria-label="Переключатель мобильного меню">
+                <use class="icon-menu" href="./images/icons.svg#icon-menu"></use>
+            </svg>
+        </button>
+
+        <div class="tablet-desktop-menu" id="menu-container">
+            <nav class="navigation-container">
+                <ul class="navigation-list">
+                    <li class="navigation-list__item">
+                        <a class="header__link navigation-list__link" href="./index.html">Студия</a>
+                    </li>
+                    <li class="navigation-list__item">
+                        <a class="header__link navigation-list__link active-page" href="./portfolio.html">Портфолио</a>
+                    </li>
+                    <li class="navigation-list__item">
+                        <a class="header__link navigation-list__link" href="#">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+
+            <ul class="contacts-list">
+                <li class="contacts-list__item">
+                    <a class="header__link contacts-list__link" href="mailto:info@devstudio.com">
+                        <svg class="contacts-list__icon-envelope">
+                            <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                        </svg>
+                        <span>info@devstudio.com</span>
+                    </a>
                 </li>
-                <li class="navigation-list__item">
-                    <a class="header__link navigation-list__link active-page" href="./portfolio.html">Портфолио</a>
-                </li>
-                <li class="navigation-list__item">
-                    <a class="header__link navigation-list__link" href="#">Контакты</a>
+                <li class="contacts-list__item">
+                    <a class="header__link contacts-list__link" href="tel:+380961111111">
+                        <svg class="contacts-list__icon-telephone">
+                            <use href="./images/symbol-defs.svg#icon-telephone"></use>
+                        </svg>
+                        <span> +38 096 111 11 11</span>
+                    </a>
                 </li>
             </ul>
-        </nav>
+        </div>
 
-        <ul class="contacts-list">
-            <li class="contacts-list__item">
-                <a class="header__link contacts-list__link" href="mailto:info@devstudio.com">
-                    <svg class="contacts-list__icon-envelope">
-                        <use href="./images/symbol-defs.svg#icon-envelope"></use>
-                    </svg>
-                    <span>info@devstudio.com</span>
-                </a>
-            </li>
-            <li class="contacts-list__item">
-                <a class="header__link contacts-list__link" href="tel:+380961111111">
-                    <svg class="contacts-list__icon-telephone">
-                        <use href="./images/symbol-defs.svg#icon-telephone"></use>
-                    </svg>
-                    <span> +38 096 111 11 11</span>
-                </a>
-            </li>
-        </ul>
+
+
+        <div class="menu-container js-menu-container" id="mobile-menu">
+            <nav class="navigation-container">
+                <ul class="navigation-list mobile-menu">
+                    <li class="navigation-list__item">
+                        <a class="header__link navigation-list__link active-page" href="./index.html">Студия</a>
+                    </li>
+                    <li class="navigation-list__item">
+                        <a class="header__link navigation-list__link" href="./portfolio.html">Портфолио</a>
+                    </li>
+                    <li class="navigation-list__item">
+                        <a class="header__link navigation-list__link" href="#">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+
+            <ul class="contacts-list">
+                <li class="contacts-list__item">
+                    <a class="header__link contacts-list__link" href="tel:+380961111111">
+                        <span> +38 096 111 11 11</span>
+                    </a>
+                </li>
+                <li class="contacts-list__item">
+                    <a class="header__link contacts-list__link" href="mailto:info@devstudio.com">
+                        <span>info@devstudio.com</span>
+                    </a>
+                </li>
+            </ul>
+
+            <ul class="mobile-social-list">
+                <li class="mobile-social-list__item">
+                    <a href="" class="mobile-social-list__link">Instagram</a>
+                </li>
+                <li class="mobile-social-list__item">
+                    <a href="" class="mobile-social-list__link">Twitter</a>
+                </li>
+                <li class="mobile-social-list__item">
+                    <a href="" class="mobile-social-list__link">Facebook</a>
+                </li>
+                <li class="mobile-social-list__item">
+                    <a href="" class="mobile-social-list__link">LinkedIn</a>
+                </li>
+            </ul>
+
+            <button type="button" class="menu-toggle js-close-menu">
+                <svg width="24" height="24" aria-label="Переключатель мобильного меню">
+                    <use class="icon-menu" href="./images/icons.svg#icon-menu-close"></use>
+                </svg>
+            </button>
+        </div>
 
     </div>
 </header>
