Сделаны отзывчивые изображения

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
             <ul class="team-list">
                 <li class="team-list__item">
-                    <img src="./images/img1.jpg" alt="І член команды" width="270" class="team-list__image">
+                    <img srcset="./images/img1-1x.jpg 1x, ./images/img1-2x.jpg 2x" src="./images/img1-1x.jpg" alt="І член команды" max-width="450" class="team-list__image">
                     <h3 class="team-list__subtitle subtitle">Игорь Демьяненко</h3>
                     <p class="team-list__position">Product Designer</p>
                     <ul class="social-list">
@@ -215,7 +215,7 @@
                     </ul>
                 </li>
                 <li class="team-list__item">
-                    <img src="./images/img2.jpg" alt="ІІ член команды" width="270" class="team-list__image">
+                    <img srcset="./images/img2-1x.jpg 1x, ./images/img2-2x.jpg 2x"  src="./images/img2-1x.jpg" alt="ІІ член команды" max-width="450" class="team-list__image">
                     <h3 class="team-list__subtitle subtitle">Ольга Репина</h3>
                     <p class="team-list__position">Frontend Developer</p>
                     <ul class="social-list">
@@ -250,7 +250,7 @@
                     </ul>
                 </li>
                 <li class="team-list__item">
-                    <img src="./images/img3.jpg" alt="ІІІ член команды" width="270" class="team-list__image">
+                    <img srcset="./images/img3-1x.jpg 1x, ./images/img3-2x.jpg 2x"  src="./images/img3-1x.jpg" alt="ІІІ член команды" max-width="450" class="team-list__image">
                     <h3 class="team-list__subtitle subtitle">Николай Тарасов</h3>
                     <p class="team-list__position">Marketing</p>
                     <ul class="social-list">
@@ -285,7 +285,7 @@
                     </ul>
                 </li>
                 <li class="team-list__item">
-                    <img src="./images/img4.jpg" alt="ІV член команды" width="270" class="team-list__image">
+                    <img srcset="./images/img4-1x.jpg 1x, ./images/img4-2x.jpg 2x"  src="./images/img4-1x.jpg" alt="ІV член команды" max-width="450" class="team-list__image">
                     <h3 class="team-list__subtitle subtitle">Михаил Ермаков</h3>
                     <p class="team-list__position">UI Designer</p>
                     <ul class="social-list">
