--- a/portfolio.html
+++ b/portfolio.html
@@ -64,10 +64,10 @@
             <nav class="navigation-container">
                 <ul class="navigation-list mobile-menu">
                     <li class="navigation-list__item">
-                        <a class="header__link navigation-list__link active-page" href="./index.html">Студия</a>
+                        <a class="header__link navigation-list__link" href="./index.html">Студия</a>
                     </li>
                     <li class="navigation-list__item">
-                        <a class="header__link navigation-list__link" href="./portfolio.html">Портфолио</a>
+                        <a class="header__link navigation-list__link active-page" href="./portfolio.html">Портфолио</a>
                     </li>
                     <li class="navigation-list__item">
                         <a class="header__link navigation-list__link" href="#">Контакты</a>
@@ -137,7 +137,7 @@
                 <li class="projects-list__item">
                     <a href="" class="projects-list__link">
                         <div class="projects-list__wrapper">
-                            <img src="./images/project1.jpg" alt="Первый проект" class="projects-list__image">
+                            <img srcset="./images/project1-1x.jpg 1x, ./images/project1-2x.jpg 2x" src="./images/project1-1x.jpg" alt="Первый проект" class="projects-list__image" max-width="450">
                             <div class="projects-list__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</div>
                         </div>
                         <div class="projects-list__description">
@@ -149,7 +149,7 @@
                 <li class="projects-list__item">
                     <a href="" class="projects-list__link">    
                         <div class="projects-list__wrapper">
-                            <img src="./images/project2.jpg" alt="Второй проект" class="projects-list__image">
+                            <img srcset="./images/project2-1x.jpg 1x, ./images/project2-2x.jpg 2x" src="./images/project2-1x.jpg" alt="Второй проект" class="projects-list__image" max-width="450">
                             <div class="projects-list__overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, tempora voluptatum voluptate deserunt illo totam sit officia maxime at.</div>
                         </div>
                         <div class="projects-list__description">
@@ -161,7 +161,7 @@
                 <li class="projects-list__item">
                     <a href="" class="projects-list__link">    
                         <div class="projects-list__wrapper">
-                            <img src="./images/project3.jpg" alt="Третий проект" class="projects-list__image">
+                            <img srcset="./images/project3-1x.jpg 1x, ./images/project3-2x.jpg 2x" src="./images/project3-1x.jpg" alt="Третий проект" class="projects-list__image" max-width="450">
                             <div class="projects-list__overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, tempora voluptatum voluptate deserunt illo totam sit officia maxime at.</div>
                         </div>
                         <div class="projects-list__description">
@@ -173,7 +173,7 @@
                 <li class="projects-list__item">
                     <a href="" class="projects-list__link">    
                         <div class="projects-list__wrapper">
-                            <img src="./images/project4.jpg" alt="Четвертый проект" class="projects-list__image">
+                            <img srcset="./images/project4-1x.jpg 1x, ./images/project4-2x.jpg 2x" src="./images/project4-1x.jpg" alt="Четвертый проект" class="projects-list__image" max-width="450">
                             <div class="projects-list__overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, tempora voluptatum voluptate deserunt illo totam sit officia maxime at.</div>
                         </div>
                         <div class="projects-list__description">
@@ -185,7 +185,7 @@
                 <li class="projects-list__item">
                     <a href="" class="projects-list__link">    
                         <div class="projects-list__wrapper">
-                            <img src="./images/project5.jpg" alt="Пятый проект" class="projects-list__image">
+                            <img srcset="./images/project5-1x.jpg 1x, ./images/project5-2x.jpg 2x" src="./images/project5-1x.jpg" alt="Пятый проект" class="projects-list__image" max-width="450">
                             <div class="projects-list__overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, tempora voluptatum voluptate deserunt illo totam sit officia maxime at.</div>
                         </div>
                         <div class="projects-list__description">
@@ -197,7 +197,7 @@
                 <li class="projects-list__item">
                     <a href="" class="projects-list__link">    
                         <div class="projects-list__wrapper">
-                            <img src="./images/project6.jpg" alt="Шестой проект" class="projects-list__image">
+                            <img srcset="./images/project6-1x.jpg 1x, ./images/project6-2x.jpg 2x" src="./images/project6-1x.jpg" alt="Шестой проект" class="projects-list__image" max-width="450">
                             <div class="projects-list__overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, tempora voluptatum voluptate deserunt illo totam sit officia maxime at.</div>
                         </div>
                         <div class="projects-list__description">
@@ -209,7 +209,7 @@
                 <li class="projects-list__item">
                     <a href="" class="projects-list__link">    
                         <div class="projects-list__wrapper">
-                            <img src="./images/project7.jpg" alt="Седьмой проект" class="projects-list__image">
+                            <img srcset="./images/project7-1x.jpg 1x, ./images/project7-2x.jpg 2x" src="./images/project7-1x.jpg" alt="Седьмой проект" class="projects-list__image" max-width="450">
                             <div class="projects-list__overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, tempora voluptatum voluptate deserunt illo totam sit officia maxime at.</div>
                         </div>
                         <div class="projects-list__description">
@@ -221,7 +221,7 @@
                 <li class="projects-list__item">
                    <a href="" class="projects-list__link">       
                         <div class="projects-list__wrapper">
-                            <img src="./images/project8.jpg" alt="Восьмой проект" class="projects-list__image">
+                            <img srcset="./images/project8-1x.jpg 1x, ./images/project8-2x.jpg 2x" src="./images/project8-1x.jpg" alt="Восьмой проект" class="projects-list__image" max-width="450">
                             <div class="projects-list__overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, tempora voluptatum voluptate deserunt illo totam sit officia maxime at.</div>
                         </div>
                         <div class="projects-list__description">
@@ -233,7 +233,7 @@
                 <li class="projects-list__item">
                    <a href="" class="projects-list__link">       
                         <div class="projects-list__wrapper">
-                            <img src="./images/project9.jpg" alt="Девятый проект" class="projects-list__image">
+                            <img srcset="./images/project9-1x.jpg 1x, ./images/project9-2x.jpg 2x" src="./images/project9-1x.jpg" alt="Девятый проект" class="projects-list__image" max-width="450">
                             <div class="projects-list__overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, tempora voluptatum voluptate deserunt illo totam sit officia maxime at.</div>
                         </div>
                         <div class="projects-list__description">
@@ -308,5 +308,9 @@
 
     </div>
 </footer>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+        integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+        crossorigin="anonymous"></script>
+    <script defer src="js/mobile-menu.js"></script>
 </body>
 </html>
