Подкорректированы оверлеи в проектах портфолио и ширина формы в футере

--- a/portfolio.html
+++ b/portfolio.html
@@ -138,7 +138,7 @@
                         <div class="projects-list__wrapper">
                             <picture>
                                 <source srcset="./images/project1-1x.jpg 1x, ./images/project1-2x.jpg 2x" media="(max-width: 767px)">
-                                <source srcset="./images/project1-354-1x.jpg 1x, ./images/project1-354-2x.jpg 2x" media="(min-width: 768px)">
+                                <source srcset="./images/project1-354-1x.jpg 1x, ./images/project1-354-2x.jpg 2x" media="(max-width: 1199px)" media="(min-width: 768px)">
                                 <source srcset="./images/project1-370-1x.jpg 1x, ./images/project1-370-2x.jpg 2x" media="(min-width: 1200px)">
                                 <img srcset="./images/project1-1x.jpg 1x, ./images/project1-2x.jpg 2x" src="./images/project1-1x.jpg" alt="Первый проект" class="projects-list__image">
                             </picture>
@@ -153,13 +153,14 @@
                 <li class="projects-list__item">
                     <a href="" class="projects-list__link">    
                         <div class="projects-list__wrapper">
-<picture>
-    <source srcset="./images/project2-1x.jpg 1x, ./images/project2-2x.jpg 2x" media="(max-width: 767px)">
-    <source srcset="./images/project2-354-1x.jpg 1x, ./images/project2-354-2x.jpg 2x" media="(min-width: 768px)">
-    <source srcset="./images/project2-370-1x.jpg 1x, ./images/project2-370-2x.jpg 2x" media="(min-width: 1200px)">
-    <img srcset="./images/project2-1x.jpg 1x, ./images/project2-2x.jpg 2x" src="./images/project2-1x.jpg"
-        alt="Первый проект" class="projects-list__image">
-</picture>                            <div class="projects-list__overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, tempora voluptatum voluptate deserunt illo totam sit officia maxime at.</div>
+                            <picture>
+                                <source srcset="./images/project2-1x.jpg 1x, ./images/project2-2x.jpg 2x" media="(max-width: 767px)">
+                                <source class="project-width-354" srcset="./images/project2-354-1x.jpg 1x, ./images/project2-354-2x.jpg 2x" media="(max-width: 1199px)" media="(min-width: 768px)">
+                                <source srcset="./images/project2-370-1x.jpg 1x, ./images/project2-370-2x.jpg 2x" media="(min-width: 1200px)">
+                                <img srcset="./images/project2-1x.jpg 1x, ./images/project2-2x.jpg 2x" src="./images/project2-1x.jpg"
+                                    alt="Первый проект" class="projects-list__image">
+                            </picture>                            
+                            <div class="projects-list__overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, tempora voluptatum voluptate deserunt illo totam sit officia maxime at.</div>
                         </div>
                         <div class="projects-list__description">
                             <h3 class="projects-list__subtitle subtitle">Постер New Orlean vs Golden Star</h3>
@@ -170,13 +171,14 @@
                 <li class="projects-list__item">
                     <a href="" class="projects-list__link">    
                         <div class="projects-list__wrapper">
-<picture>
-    <source srcset="./images/project3-1x.jpg 1x, ./images/project3-2x.jpg 2x" media="(max-width: 767px)">
-    <source srcset="./images/project3-354-1x.jpg 1x, ./images/project3-354-2x.jpg 2x" media="(min-width: 768px)">
-    <source srcset="./images/project3-370-1x.jpg 1x, ./images/project3-370-2x.jpg 2x" media="(min-width: 1200px)">
-    <img srcset="./images/project3-1x.jpg 1x, ./images/project3-2x.jpg 2x" src="./images/project3-1x.jpg"
-        alt="Первый проект" class="projects-list__image">
-</picture>                            <div class="projects-list__overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, tempora voluptatum voluptate deserunt illo totam sit officia maxime at.</div>
+                            <picture>
+                                <source srcset="./images/project3-1x.jpg 1x, ./images/project3-2x.jpg 2x" media="(max-width: 767px)">
+                                <source srcset="./images/project3-354-1x.jpg 1x, ./images/project3-354-2x.jpg 2x" media="(max-width: 1199px)" media="(min-width: 768px)">
+                                <source srcset="./images/project3-370-1x.jpg 1x, ./images/project3-370-2x.jpg 2x" media="(min-width: 1200px)">
+                                <img srcset="./images/project3-1x.jpg 1x, ./images/project3-2x.jpg 2x" src="./images/project3-1x.jpg"
+                                    alt="Первый проект" class="projects-list__image">
+                            </picture>                            
+                            <div class="projects-list__overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, tempora voluptatum voluptate deserunt illo totam sit officia maxime at.</div>
                         </div>
                         <div class="projects-list__description">
                             <h3 class="projects-list__subtitle subtitle">Ресторан Seafood</h3>
@@ -187,13 +189,14 @@
                 <li class="projects-list__item">
                     <a href="" class="projects-list__link">    
                         <div class="projects-list__wrapper">
-<picture>
-    <source srcset="./images/project4-1x.jpg 1x, ./images/project4-2x.jpg 2x" media="(max-width: 767px)">
-    <source srcset="./images/project4-354-1x.jpg 1x, ./images/project4-354-2x.jpg 2x" media="(min-width: 768px)">
-    <source srcset="./images/project4-370-1x.jpg 1x, ./images/project4-370-2x.jpg 2x" media="(min-width: 1200px)">
-    <img srcset="./images/project4-1x.jpg 1x, ./images/project4-2x.jpg 2x" src="./images/project4-1x.jpg"
-        alt="Первый проект" class="projects-list__image">
-</picture>                            <div class="projects-list__overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, tempora voluptatum voluptate deserunt illo totam sit officia maxime at.</div>
+                            <picture>
+                                <source srcset="./images/project4-1x.jpg 1x, ./images/project4-2x.jpg 2x" media="(max-width: 767px)">
+                                <source srcset="./images/project4-354-1x.jpg 1x, ./images/project4-354-2x.jpg 2x" media="(max-width: 1199px)" media="(min-width: 768px)">
+                                <source srcset="./images/project4-370-1x.jpg 1x, ./images/project4-370-2x.jpg 2x" media="(min-width: 1200px)">
+                                <img srcset="./images/project4-1x.jpg 1x, ./images/project4-2x.jpg 2x" src="./images/project4-1x.jpg"
+                                    alt="Первый проект" class="projects-list__image">
+                            </picture>                            
+                            <div class="projects-list__overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, tempora voluptatum voluptate deserunt illo totam sit officia maxime at.</div>
                         </div>
                         <div class="projects-list__description">
                             <h3 class="projects-list__subtitle subtitle">Проект Prime</h3>
@@ -204,13 +207,14 @@
                 <li class="projects-list__item">
                     <a href="" class="projects-list__link">    
                         <div class="projects-list__wrapper">
-<picture>
-    <source srcset="./images/project5-1x.jpg 1x, ./images/project5-2x.jpg 2x" media="(max-width: 767px)">
-    <source srcset="./images/project5-354-1x.jpg 1x, ./images/project5-354-2x.jpg 2x" media="(min-width: 768px)">
-    <source srcset="./images/project5-370-1x.jpg 1x, ./images/project5-370-2x.jpg 2x" media="(min-width: 1200px)">
-    <img srcset="./images/project5-1x.jpg 1x, ./images/project5-2x.jpg 2x" src="./images/project5-1x.jpg"
-        alt="Первый проект" class="projects-list__image">
-</picture>                            <div class="projects-list__overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, tempora voluptatum voluptate deserunt illo totam sit officia maxime at.</div>
+                            <picture>
+                                <source srcset="./images/project5-1x.jpg 1x, ./images/project5-2x.jpg 2x" media="(max-width: 767px)">
+                                <source srcset="./images/project5-354-1x.jpg 1x, ./images/project5-354-2x.jpg 2x" media="(max-width: 1199px)" media="(min-width: 768px)">
+                                <source srcset="./images/project5-370-1x.jpg 1x, ./images/project5-370-2x.jpg 2x" media="(min-width: 1200px)">
+                                <img srcset="./images/project5-1x.jpg 1x, ./images/project5-2x.jpg 2x" src="./images/project5-1x.jpg"
+                                    alt="Первый проект" class="projects-list__image">
+                            </picture>                            
+                            <div class="projects-list__overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, tempora voluptatum voluptate deserunt illo totam sit officia maxime at.</div>
                         </div>
                         <div class="projects-list__description">
                             <h3 class="projects-list__subtitle subtitle">Проект Boxes</h3>
@@ -221,13 +225,14 @@
                 <li class="projects-list__item">
                     <a href="" class="projects-list__link">    
                         <div class="projects-list__wrapper">
-<picture>
-    <source srcset="./images/project6-1x.jpg 1x, ./images/project6-2x.jpg 2x" media="(max-width: 767px)">
-    <source srcset="./images/project6-354-1x.jpg 1x, ./images/project6-354-2x.jpg 2x" media="(min-width: 768px)">
-    <source srcset="./images/project6-370-1x.jpg 1x, ./images/project6-370-2x.jpg 2x" media="(min-width: 1200px)">
-    <img srcset="./images/project6-1x.jpg 1x, ./images/project6-2x.jpg 2x" src="./images/project6-1x.jpg"
-        alt="Первый проект" class="projects-list__image">
-</picture>                            <div class="projects-list__overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, tempora voluptatum voluptate deserunt illo totam sit officia maxime at.</div>
+                            <picture>
+                                <source srcset="./images/project6-1x.jpg 1x, ./images/project6-2x.jpg 2x" media="(max-width: 767px)">
+                                <source srcset="./images/project6-354-1x.jpg 1x, ./images/project6-354-2x.jpg 2x" media="(max-width: 1199px)" media="(min-width: 768px)">
+                                <source srcset="./images/project6-370-1x.jpg 1x, ./images/project6-370-2x.jpg 2x" media="(min-width: 1200px)">
+                                <img srcset="./images/project6-1x.jpg 1x, ./images/project6-2x.jpg 2x" src="./images/project6-1x.jpg"
+                                    alt="Первый проект" class="projects-list__image">
+                            </picture>                            
+                            <div class="projects-list__overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, tempora voluptatum voluptate deserunt illo totam sit officia maxime at.</div>
                         </div>
                         <div class="projects-list__description">
                             <h3 class="projects-list__subtitle subtitle">Inspiration has no Borders</h3>
@@ -238,13 +243,14 @@
                 <li class="projects-list__item">
                     <a href="" class="projects-list__link">    
                         <div class="projects-list__wrapper">
-<picture>
-    <source srcset="./images/project7-1x.jpg 1x, ./images/project7-2x.jpg 2x" media="(max-width: 767px)">
-    <source srcset="./images/project7-354-1x.jpg 1x, ./images/project7-354-2x.jpg 2x" media="(min-width: 768px)">
-    <source srcset="./images/project7-370-1x.jpg 1x, ./images/project7-370-2x.jpg 2x" media="(min-width: 1200px)">
-    <img srcset="./images/project7-1x.jpg 1x, ./images/project7-2x.jpg 2x" src="./images/project7-1x.jpg"
-        alt="Первый проект" class="projects-list__image">
-</picture>                            <div class="projects-list__overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, tempora voluptatum voluptate deserunt illo totam sit officia maxime at.</div>
+                            <picture>
+                                <source srcset="./images/project7-1x.jpg 1x, ./images/project7-2x.jpg 2x" media="(max-width: 767px)">
+                                <source srcset="./images/project7-354-1x.jpg 1x, ./images/project7-354-2x.jpg 2x" media="(max-width: 1199px)" media="(min-width: 768px)">
+                                <source srcset="./images/project7-370-1x.jpg 1x, ./images/project7-370-2x.jpg 2x" media="(min-width: 1200px)">
+                                <img srcset="./images/project7-1x.jpg 1x, ./images/project7-2x.jpg 2x" src="./images/project7-1x.jpg"
+                                    alt="Первый проект" class="projects-list__image">
+                            </picture>                            
+                            <div class="projects-list__overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, tempora voluptatum voluptate deserunt illo totam sit officia maxime at.</div>
                         </div>
                         <div class="projects-list__description">
                             <h3 class="projects-list__subtitle subtitle">Издание Limited Edition</h3>
@@ -255,13 +261,14 @@
                 <li class="projects-list__item">
                    <a href="" class="projects-list__link">       
                         <div class="projects-list__wrapper">
-<picture>
-    <source srcset="./images/project8-1x.jpg 1x, ./images/project8-2x.jpg 2x" media="(max-width: 767px)">
-    <source srcset="./images/project8-354-1x.jpg 1x, ./images/project8-354-2x.jpg 2x" media="(min-width: 768px)">
-    <source srcset="./images/project8-370-1x.jpg 1x, ./images/project8-370-2x.jpg 2x" media="(min-width: 1200px)">
-    <img srcset="./images/project8-1x.jpg 1x, ./images/project8-2x.jpg 2x" src="./images/project8-1x.jpg"
-        alt="Первый проект" class="projects-list__image">
-</picture>                            <div class="projects-list__overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, tempora voluptatum voluptate deserunt illo totam sit officia maxime at.</div>
+                            <picture>
+                                <source srcset="./images/project8-1x.jpg 1x, ./images/project8-2x.jpg 2x" media="(max-width: 767px)">
+                                <source srcset="./images/project8-354-1x.jpg 1x, ./images/project8-354-2x.jpg 2x" media="(max-width: 1199px)" media="(min-width: 768px)">
+                                <source srcset="./images/project8-370-1x.jpg 1x, ./images/project8-370-2x.jpg 2x" media="(min-width: 1200px)">
+                                <img srcset="./images/project8-1x.jpg 1x, ./images/project8-2x.jpg 2x" src="./images/project8-1x.jpg"
+                                    alt="Первый проект" class="projects-list__image">
+                            </picture>                            
+                            <div class="projects-list__overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, tempora voluptatum voluptate deserunt illo totam sit officia maxime at.</div>
                         </div>
                         <div class="projects-list__description">
                             <h3 class="projects-list__subtitle subtitle">Проект LAB</h3>
@@ -272,13 +279,14 @@
                 <li class="projects-list__item">
                    <a href="" class="projects-list__link">       
                         <div class="projects-list__wrapper">
-<picture>
-    <source srcset="./images/project9-1x.jpg 1x, ./images/project9-2x.jpg 2x" media="(max-width: 767px)">
-    <source srcset="./images/project9-354-1x.jpg 1x, ./images/project9-354-2x.jpg 2x" media="(min-width: 768px)">
-    <source srcset="./images/project9-370-1x.jpg 1x, ./images/project9-370-2x.jpg 2x" media="(min-width: 1200px)">
-    <img srcset="./images/project9-1x.jpg 1x, ./images/project9-2x.jpg 2x" src="./images/project9-1x.jpg"
-        alt="Первый проект" class="projects-list__image">
-</picture>                            <div class="projects-list__overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, tempora voluptatum voluptate deserunt illo totam sit officia maxime at.</div>
+                            <picture>
+                                <source srcset="./images/project9-1x.jpg 1x, ./images/project9-2x.jpg 2x" media="(max-width: 767px)">
+                                <source srcset="./images/project9-354-1x.jpg 1x, ./images/project9-354-2x.jpg 2x" media="(max-width: 1199px)" media="(min-width: 768px)">
+                                <source srcset="./images/project9-370-1x.jpg 1x, ./images/project9-370-2x.jpg 2x" media="(min-width: 1200px)">
+                                <img srcset="./images/project9-1x.jpg 1x, ./images/project9-2x.jpg 2x" src="./images/project9-1x.jpg"
+                                    alt="Первый проект" class="projects-list__image">
+                            </picture>                            
+                            <div class="projects-list__overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, tempora voluptatum voluptate deserunt illo totam sit officia maxime at.</div>
                         </div>
                         <div class="projects-list__description">
                             <h3 class="projects-list__subtitle subtitle">Growing Business</h3>
